--- a/QuestionService/QuestionService/src/main/resources/application.properties
+++ b/QuestionService/QuestionService/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8082
+server.port=9082
 spring.application.name=QUESTION-SERVICE
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_yt
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Nihar@1234
 
 spring.jpa.show-sql=true 
 spring.jpa.hibernate.ddl-auto=update
