--- a/QuizService/QuizService/src/main/resources/application.properties
+++ b/QuizService/QuizService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 spring.application.name=QUIZ-SERVICE
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_yt
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Nihar@1234
 
 spring.jpa.show-sql=true 
 spring.jpa.hibernate.ddl-auto=update
